目标展示修改

--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -1,5 +1,5 @@
 ﻿.home-index{
-    &.scroll-panel{padding:20px 20px 20px 20px;}
+    &.scroll-panel{padding:10px;}
     .infoBox{
         position:relative;
         &:after{
