--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -223,7 +223,7 @@
   clear: both;
   display: block;
   background:#fff;
-  margin-bottom:15px;
+  margin-bottom:10px;
   padding:35px 35px 10px 35px;
   border-radius:8px;
   overflow: hidden;
@@ -231,7 +231,7 @@
     padding:0px;
     h2{
       float: left;
-      font-size:$fontsize25;
+      font-size:$fontsize20;
       color:#2b3848;
     }
     .ChinaphoneNumTag{
@@ -239,7 +239,7 @@
       .item-clues{
         float:left;
         position: relative;
-        font-size:$fontsize15;
+        font-size:$fontsize13;
         color:$menuBg;
         cursor: pointer;
         line-height: 23px;
@@ -452,4 +452,15 @@
 }
 .pro-uploader .avatar {
   width: 100%;
+}
+
+.chscroll-panel{
+  padding: 10px!important;
+}
+
+.ChinaphoneNum .chcard-header{
+  margin-bottom: 10px;
+}
+.EnphoneCardFrDate .el-card__header{
+  margin-bottom: 10px!important;
 }
