--- a/src/styles/-ownPush.scss
+++ b/src/styles/-ownPush.scss
@@ -1026,11 +1026,6 @@
             .qualityTable{
               clear: both;
               display: block;
-              position: absolute;
-              left:0px;
-              top:0px;
-              right:0px;
-              bottom:0px;
               padding: 30px;
               width:100%;
               z-index:10;
@@ -1044,14 +1039,13 @@
                     border-right: none;
                 }
                 .el-table .el-table__cell{
-                    background-color: #f8fafc;
                     text-align: center;
                     color: #1a1a1a;
                     font-size:$fontsize13;
                     padding: 13px 0;
                 }
                 .el-table th.el-table__cell{
-                    background-color: #f4f6f9;
+                    background:#f4f6f9;
                     color: #808080;
                 }
                 .el-table .cell{
@@ -1117,14 +1111,17 @@
         &.year-chart{
           .item-column{
             margin-right:10px;
-            background-color:#fff;
             &:last-child{
               margin-right:0px;
             }
             .item-quality{
               padding-bottom:30px;
+              position: relative;
               .column-header{
                 padding:30px 30px 15px;
+                position: absolute;
+                left:0px;
+                top:0px;
                 .txt-header{
                   height:28px;
                   strong{
@@ -1158,6 +1155,7 @@
                   width:100%;
                   margin: 0 auto;
                   min-width:300px;
+                  padding-top: 35px;
                 }
               }
             }
@@ -1533,4 +1531,42 @@
     .resulttop{
       margin-top:92px;
     }
+}
+.mainTool{
+  clear: both;
+  dl{
+    padding:5px 15px;
+    dt{
+      clear: both;
+      display: block;
+      font-size: 14px;
+      font-weight: bold;
+      color: #333;
+      padding-bottom: 5px;
+    }
+    dd{
+      clear: both;
+      display: block;
+      font-size: 14px;
+      position: relative;
+      line-height: 20px;
+      margin-top: 5px;
+      padding-left: 18px;
+      i{
+        position: absolute;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        display: block;
+        left: 0px;
+        top: 6px;
+      }
+    }
+    &:first-child{
+      padding-left:5px;
+    }
+    &:last-child{
+      padding-right:5px;
+    }
+  }
 }
