--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -54,6 +54,30 @@
                     }
                 }
             }
+            .departItemsYear{
+                display: inline-block;
+                padding-left:20px;
+                span{
+                    padding: 0 10px;
+                    height: 29px;
+                    text-align: center;
+                    line-height: 27px;
+                    border: 1px solid #0048ff;
+                    color: #0048ff;
+                    font-size: 13px;
+                    box-sizing: border-box;
+                    cursor: pointer;
+                    margin-left: -1px;
+                    position: relative;
+                    display: inline-block;
+                    background: #fff;
+                    &.hover{
+                        border: 1px solid #0048ff;
+                        color: #ffffff;
+                        background: #0048ff;
+                    }
+                }
+            }
             .departItemBtn{
                 display: inline-block;
                 font-style: normal;
