--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -1,4 +1,19 @@
 ﻿.EnphoneCard{
+    .scroll-panel{
+      padding:10px;
+      .fixed-table .table-mask{
+        height: 10px!important;
+      }
+      .fixed-table .el-table__header-wrapper{
+        top:109px;
+      }
+      .fixed-table .el-table__fixed-header-wrapper{
+        top:109px;
+      }
+      .tipsHas.box-card .el-card__header .tipsHasItem{
+        margin-bottom:0px;
+      }
+    }
     .sub-router{
         width:230px;
         .Sales-list{
