--- a/src/styles/-productAnalysis.scss
+++ b/src/styles/-productAnalysis.scss
@@ -86,7 +86,7 @@
                 float:left;
                 margin-left:40px;
                 width:calc(50% - 20px);
-                padding:27px 32px 22px 20px;
+                padding:27px 12px 22px 20px;
                 margin-bottom:29px;
                 background:-moz-linear-gradient(top,#0a2775 0%, #011038 100%);
                 background:-webkit-linear-gradient(top,#0a2775 0%,#011038 100%);
@@ -220,7 +220,7 @@
                     .focusProUlChart{
                         position:absolute;
                         left:0;
-                        top:4px;
+                        top:14px;
                         width:100%;
                         height:100%;
                         .chart-panel{
@@ -230,10 +230,9 @@
                             top:0px;
                         }
                         .chart-pie{
-                            position:absolute;
-                            left:0px;
-                            width:100%;
-                            top:0px;
+                            position: absolute;
+                            left: 50%;
+                            top: 0px;
                         }
                     }
                 }
@@ -1007,7 +1006,7 @@
         }
         .enquirieTrendBox{
             padding-left:30px;
-            padding-right:30px;
+            padding-right:20px;
             margin-top:15px;
             .chart-canvas{
                 clear:both;
@@ -1500,7 +1499,7 @@
             .enquirieTrend{
                 float: left;
                 width: 50%;
-                padding:25px 33px 30px 28px;
+                padding:25px 20px 30px 28px;
                 margin-bottom: 0px;
                 position: relative;
                 transition: all 0.5s;
@@ -2390,7 +2389,40 @@
         }
     }
 }
-
+.columTool{
+    dt{
+        clear: both;
+        display: block;
+        font-size: 12px;
+        line-height: 1;
+    }
+    dd{
+        clear: both;
+        display: block;
+        font-size: 12px;
+        position: relative;
+        line-height:1;
+        margin-top:12px;
+        padding-left: 18px;
+        i{
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            display: block;
+            left: 0px;
+            top: 2px;
+        }
+        span{
+            float: left;
+            width: 70px;
+        }
+        strong{
+            float: right;
+            font-weight: normal;
+        }
+    }
+}
 @media screen and(max-width:1600px){
     .pro_user .cpInquiry{
         width: 100%;
