图表圆形修改

--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -814,3 +814,13 @@
     }
   }
 }
+.toolDiv{
+  .tooltitle{
+    margin-bottom: 3px;
+  }
+  .toolval{
+    float: right;
+    font-weight: bold;
+    margin-left: 20px;
+  }
+}
