--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -8,7 +8,7 @@
   padding: 0!important;
   background-color: #101626;
   .box-card{
-    padding: 15px;
+    padding: 14px;
   }
   .nowCate{
     padding: 15px 20px;
@@ -112,10 +112,11 @@
 }
 .hxpage{
   background-image: linear-gradient(131deg, #24335b 0%, #1c1f40 100%);
-  padding: 22px 25px 20px;
-  margin-bottom: 20px;
+  padding: 18px 25px 20px;
+  margin-bottom: 14px;
+  border: 1px solid #24335b;
   &.region-panel{
-    padding: 22px 25px 0;
+    padding: 18px 25px 0;
   }
   &.money-page{
     .module-top{
@@ -123,8 +124,8 @@
     }
   }
   .title-view{
-    height: 26px;
-    line-height: 26px;
+    height: 33px;
+    line-height: 33px;
     margin-bottom: 10px;
     .title{
       font-size: 16px;
@@ -132,6 +133,7 @@
       float: left;
       margin-right: 4px;
       font-weight: bold;
+      line-height: 33px;
       span{
         font-size: 13px;
         color: #a1a1a1;
@@ -150,7 +152,7 @@
       float: right;
       cursor: pointer;
       position: relative;
-      line-height: 26px;
+      line-height: 33px;
       top: -1px;
       .svg-i{
         font-size: 10px;
@@ -163,21 +165,25 @@
       margin-right: 20px;
       display: flex;
       .btn-item{
-        padding: 0 10px;
-        height: 26px;
+        padding: 0 15px;
+        height: 33px;
         text-align: center;
-        line-height: 24px;
+        line-height: 31px;
         border: 1px solid rgba(225,227,234,.2);
         color: #9ea5af;
-        font-size: 12px;
+        font-size: 14px;
         box-sizing: border-box;
         cursor: pointer;
         margin-left: -1px;
         position: relative;
+        border-radius: 2px 0 0 2px;
         &:hover{
           color: #496bf2;
           border: 1px solid #496bf2;
           z-index: 1;
+        }
+        &+.btn-item{
+          border-radius: 0 2px 2px 0;
         }
       }
       .active{
@@ -216,7 +222,7 @@
     }
   }
   .slide-panel{
-    height: 236px;
+    height: 235px;
     margin: 0 -25px;
     overflow: hidden;
     position: relative;
@@ -485,7 +491,7 @@
     }
     .top-item{
       display: flex;
-      padding: 21px 0 13px;
+      padding-top: 21px;
       cursor: pointer;
       a{
         flex:1;
@@ -515,8 +521,8 @@
       }
       .top-img{
         display: flex;
-        width: 44px;
-        height: 44px;
+        width: 46px;
+        height: 46px;
         border-radius: 2px;
         overflow: hidden;
         position: relative;
@@ -530,7 +536,7 @@
           top: -1px;
           right: -1px;
           bottom: -1px;
-          background-image: linear-gradient(0deg,#ff4909,#f8b253);
+          background-image: linear-gradient(-30deg, #0061ed 0%, #7fceff 100%);
           z-index: -1;
         }
         img{
@@ -541,8 +547,8 @@
         
       }
       .nopic{
-        width:44px;
-        height:44px;
+        width:46px;
+        height:46px;
         overflow: hidden;
         border-radius: 2px;
         position: relative;
@@ -550,57 +556,58 @@
         display: flex;
         background: url(../assets/default_pic.jpg) center center no-repeat;
         background-size:100%;
-      } 
+      }
+      .top-all{
+        width: calc(100% - 150px);
+        margin-left: 22px;
+      }
       .top-name{
-        width: 68px;
-        height: 44px;
-        line-height: 44px;
+        line-height: 14px;
         font-size: 13px;
-        color: #fff;
+        color: #ccc;
         text-align: left;
-        margin-left: 20px;
+        margin-top: -1px;
       }
       .top-width{
-        width: calc(100% - 277px);
-        height: 17px;
+        width: 100%;
+        height: 28px;
+        padding: 3px;
         box-sizing: border-box;
         position: relative;
         display: flex;
-        background-color: #29325c;
-        margin-top: 14px;
-	      border-radius: 0px 8px 8px 0px;
+        background-color: rgba(50,64,113,0.5);
+        margin-top: 7px;
         div{
-          height: 17px;
-          border-radius: 0px 8px 8px 0px;
-          background-image: linear-gradient(-90deg, #2e7ff3 0%, #4ab5f8 100%);
+          height: 22px;
+          background-image: linear-gradient(90deg,  #2e7ff3 0%,  #5abfff 100%);;
           position: relative;
         }
-        .top-bar1{
-          background-image: linear-gradient(-90deg, #ff395d 0%, #d21435 100%);
-          &:after{
-            content: '';
-            display: block;
-            position: absolute;
-            width: 16px;
-            height: 16px;
-            background: url(../assets/airplane.png) center center no-repeat;
-            top: 0;
-            right: -26px;
-          }
-        }
-        .top-bar2{
-          background-image: linear-gradient(-90deg, #f9c020 0%, #f83801 100%), 
-              linear-gradient(-90deg, #ffa734 0%, #ff7a21 100%);    
-          &:after{
-            @extend .top-bar1:after
-          }
-        }
-        .top-bar3{
-          background-image: linear-gradient(-90deg, #ffcf67 0%, #ff7a21 100%);
-          &:after{
-            @extend .top-bar1:after
-          }
-        }
+        // .top-bar1{
+        //   background-image: linear-gradient(-90deg, #ff395d 0%, #d21435 100%);
+        //   &:after{
+        //     content: '';
+        //     display: block;
+        //     position: absolute;
+        //     width: 16px;
+        //     height: 16px;
+        //     background: url(../assets/airplane.png) center center no-repeat;
+        //     top: 0;
+        //     right: -26px;
+        //   }
+        // }
+        // .top-bar2{
+        //   background-image: linear-gradient(-90deg, #f9c020 0%, #f83801 100%), 
+        //       linear-gradient(-90deg, #ffa734 0%, #ff7a21 100%);    
+        //   &:after{
+        //     @extend .top-bar1:after
+        //   }
+        // }
+        // .top-bar3{
+        //   background-image: linear-gradient(-90deg, #ffcf67 0%, #ff7a21 100%);
+        //   &:after{
+        //     @extend .top-bar1:after
+        //   }
+        // }
       }
       .top-num{
         display: flex;
@@ -619,7 +626,8 @@
         font-size: 13px;
         margin-left: 16px;
         width: 65px;
-        line-height: 44px;
+        line-height: 28px;
+        margin-top: 20px;
         .num01{
             background-image: linear-gradient(90deg,#f9c020 0%,#f83801 60%);
             background-clip: text;
@@ -644,7 +652,7 @@
       }
     }
     .top-item+.top-item{
-      border-top: 1px solid rgba(240,240,240,0.04);
+      padding-top: 30px;
     }
   }
   .top-money{
